changed name main to runner